hide regular login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,8 @@ en:
       text_whom_collaborate: "Col·laboratori Catalunya is driven by:"
       text_collaborate_eu_html: |
         Col·laboratori Catalunya is driven by: The operations of this project are co-financed with <strong>FEDER</strong> funds, intended to encourage the realization of R&D projects in Catalonia and with a high impact on the territory and companies.
+    login:
+      admin_login: Admin sign-in
   decidim:
     content_blocks:
       links_blocks:
