--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -35,6 +35,8 @@ es:
       text_whom_collaborate: "El Col·laboratori Catalunya está impulsado por:"
       text_collaborate_eu_html: | 
         El Col·laboratori Catalunya está impulsado por: Las operaciones de este proyecto están cofinanciadas con los fondos <strong>FEDER</strong>, destinados a incentivar la realización de proyectos de I+D en Cataluña y con un alto impacto en el territorio y en las empresas.
+    login:
+      admin_login: Entrada para administradores
   decidim:
     content_blocks:
       links_blocks:
