--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -35,6 +35,8 @@ ca:
       text_whom_collaborate: "El Col·laboratori Catalunya està impulsat per:"
       text_collaborate_eu_html: |
         El Col·laboratori Catalunya està impulsat per: Les operacions d’aquest projecte estan cofinançades amb els fons <strong>FEDER</strong>, destinats a incentivar la realització de projectes d’R+D a Catalunya i amb un alt impacte al territori i a les empreses.
+    login:
+      admin_login: Entrada per administradors
   decidim:
     content_blocks:
       links_blocks:
