--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,6 +37,7 @@ es:
         El Col·laboratori Catalunya está impulsado por: Las operaciones de este proyecto están cofinanciadas con los fondos <strong>FEDER</strong>, destinados a incentivar la realización de proyectos de I+D en Cataluña y con un alto impacto en el territorio y en las empresas.
     login:
       admin_login: Entrada para administradores
+      wpoauth: Mapa d'Agents
   decidim:
     content_blocks:
       links_blocks:
