update footer text

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -32,7 +32,7 @@
 ca:
   noesfeinadedones:
     footer:
-      text: "Noésfeinadedones? és un projecte impulsat per:"
+      text: "Una iniciativa del centre de recerca i2CAT i de Telecos.cat, en el marc del projecte Noesfeinadedones, amb número d’expedient SDC005/24/000358. Amb el suport de la Generalitat de Catalunya i finançada pel programa Next Generation EU."
       generalitat: "Generalitat de Catalunya"
       telecos: "Associació Catalana d'Enginyeria de Telecomunicació"
       i2cat: "Fundació i2CAT"
