--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -31,6 +31,14 @@
 
 es:
   noesfeinadedones:
+    proposals:
+      buttons:
+        first_button_cta: Ser mujer referente
+        first_button_link: https://noesfeinadedones.cat/assemblies/projecte/f/1/proposals
+        second_button_cta: Pedir una mentoría
+        second_button_link: https://noesfeinadedones.cat/assemblies/projecte/f/4/
+        third_button_cta: Página privada de mentoras
+        third_button_link: https://noesfeinadedones.cat/assemblies/forum-mentores
     footer:
       texto: "Una iniciativa del centro de investigación i2CAT y de Telecos.cat, en el marco del proyecto Noesfeinadedones, con número de expediente SDC005/24/000358. Con el apoyo de la Generalidad de Cataluña y financiada por el programa Next Generation EU." 
       generalitat: "Generalitat de Catalunya" 
