--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -33,6 +33,7 @@ es:
   noesfeinadedones:
     proposals:
       buttons:
+        show: "true"
         first_button_cta: Ser mujer referente
         first_button_link: https://noesfeinadedones.cat/assemblies/projecte/f/1/proposals
         second_button_cta: Pedir una mentoría
