change generalitat for departament empresa (#34)

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -42,7 +42,7 @@ es:
         third_button_link: https://noesfeinadedones.cat/assemblies/forum-mentores
     footer:
       texto: "Una iniciativa del centro de investigación i2CAT y de Telecos.cat, en el marco del proyecto Noesfeinadedones, con número de expediente SDC005/24/000358. Con el apoyo de la Generalidad de Cataluña y financiada por el programa Next Generation EU." 
-      generalitat: "Generalitat de Catalunya" 
+      generalitat_empresa_i_treball: "Departamento de Empresa y Trabajo. Generalitat de Catalunya" 
       telecos: "Asociación Catalana de Ingeniería de Telecomunicación" 
       i2cat: "Fundación i2CAT" 
       nextgeneration: "Financiado por la Unión Europea. Next Generation EU" 
