--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -42,7 +42,7 @@ ca:
         third_button_link: https://noesfeinadedones.cat/assemblies/forum-mentores
     footer:
       text: "Una iniciativa del centre de recerca i2CAT i de Telecos.cat, en el marc del projecte Noesfeinadedones, amb número d’expedient SDC005/24/000358. Amb el suport de la Generalitat de Catalunya i finançada pel programa Next Generation EU."
-      generalitat: "Generalitat de Catalunya"
+      generalitat_empresa_i_treball: "Departament d'Empresa i Treball. Generalitat de Catalunya" 
       telecos: "Associació Catalana d'Enginyeria de Telecomunicació"
       i2cat: "Fundació i2CAT"
       nextgeneration: "Finançat per la Unió Europea. Next Generation EU"
