add pla_recuperacio to footer

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -47,6 +47,7 @@ ca:
       i2cat: "Fundació i2CAT"
       nextgeneration: "Finançat per la Unió Europea. Next Generation EU"
       nextgeneration-catalunya: "Next Generation Catalunya"
+      pla-recuperacio: "Pla de Recuperació, Transformació i Resiliència"
   colab:
     footer:
       text_whom_collaborate: "El Col·laboratori Catalunya està impulsat per:"
