--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
       i2cat: "i2CAT Foundation"
       nextgeneration: "Financed by the European Union. Next Generation EU."
       nextgeneration-catalunya: "Next Generation Catalonia"
+      pla-recuperacio: "Recovery, Transformation and Resilience Plan"
   colab:
     footer:
       text_whom_collaborate: "Col·laboratori Catalunya is driven by:"
