--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -47,6 +47,7 @@ es:
       i2cat: "Fundación i2CAT" 
       nextgeneration: "Financiado por la Unión Europea. Next Generation EU" 
       nextgeneration-catalunya: "Next Generation Catalunya"
+      pla-recuperacio: "Plan de Recuperación, Transformación y Resiliencia"
   colab:
     footer:
       text_whom_collaborate: "El Col·laboratori Catalunya está impulsado por:"
